# adventofcode

./: .gitignore  README.md
.devcontainer/2023/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
2019/shared/: intcode.py
2020/day-0/: part1.py
2020/day-10/: part1.py  part2.py
2020/day-11/: part1.py  part2.py
2020/day-12/: part1.py  part2.py
2020/day-13/: part1.py  part2.py
2020/day-14/: part1.py  part2.py
2020/day-15/: part1.py  part2.py
2020/day-16/: part1.py  part2.py
2020/day-17/: part1.py  part2.py
2020/day-18/: part1.py  part2.py
2020/day-19/: part1.py  part2.py
2020/day-20/: part1.py  part2.py
2020/day-4/: part1.py  part2.py
2020/day-5/: part1.py  part2.py
2020/day-6/: part1.py  part2.py
2020/day-7/: part1.py  part2.py
2022/: Pipfile  README.md
2023/: README.md  make.py  pyproject.toml  start
2023/day-01/: README.md  part1.py  part2.py
2023/day-02/: README.md  part1.py  part2.py
2023/day-03/: README.md  part1.py  part2.py
2023/day-04/: README.md  part1.py  part2.py
2023/day-05/: README.md  part1.py  part2.py
2023/day-06/: README.md  part1.py  part2.py
2023/day-07/: README.md  part1.py  part2.py
2023/day-08/: README.md  part1.py  part2.py
2023/day-09/: README.md  part1.py  part2.py
2023/day-10/: README.md  part1.py  part2.py  scratch.py  scratch_2.py  scratch_3.py  scratch_4.py
2023/day-11/: README.md  part1.py  part2.py
2023/day-12/: README.md  part1.py  part2.py  scratch1.py
2023/helpers/: rich.py  scripts.py
2023/templates/: year.README.jinja
2023/templates/day/: part1.py  part2.py
(+127 files in other folders)
